plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "6.1.0"
    id 'io.freefair.lombok' version '6.4.0'
}

group 'com.example'
version '1.0'

repositories {
    mavenCentral()

    maven { url 'https://repo.spongepowered.org/maven' }
    maven { url 'https://repo.velocitypowered.com/snapshots/' }
    maven { url 'https://libraries.minecraft.net' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.github.Minestom:Minestom:cc0c7e00b2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
}

jar {
    manifest {
        attributes 'Main-Class': 'com.example.server.Start',
                "Multi-Release": true
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}